fixes layout bugs

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,65 +1,73 @@
-*{
-    box-sizing: border-box;
-}
-
 body {
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    background-color: #f2f2f2
-}
-
-header {
-    display: flex;
-    background-color: #00091a;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    width: 100%;
+    margin: 0;
+    top: 0;
+    padding: 0;
+    background-color: whitesmoke;
 }
 
 header h1 {
-    font-size: 60px;
-    padding: 10px 15px 10px 60px;
-    margin: 10px 10px 10px 0px;
+    margin: 10px 0 10px 0;
+    padding: 10px 10px 10px 60px;
+    font-size: 50px;
     background-color: #adebeb;
-    color: #00091a;
+}
+
+header {
+    background-color: #00091a;
     display: flex;
+    justify-content: space-between;
 }
 
-header nav ul {
-    display:flex;
-    width:100%;   
+.name {
+    align-items: flex-start;
 }
 
-header nav ul li {
-    color: #adebeb;
+.nav {
+    align-items: flex-end;
+    padding: 10px 0 20px 0;
     font-size: 20px;
-    text-decoration: underline;
-    list-style: none;
-    padding: 5px;
-    margin: 5px;
-    width: 100%;
+    color: #adebeb;
+    margin: 10px;
 }
 
-header a:link {
+.nav a {
+    font: 20px;
+    position: relative;
+    text-decoration: none;
+    color: #adebeb;
+    padding: 15px;
+    border-bottom: 2px solid #adebeb;
+    padding-bottom: 5px;
+    margin: 2px 15px 2px 15px;
+    align-content: flex-end;
+}
+
+.nav a:visited {
     color:#adebeb;
 }
 
-header a:visited {
-    color: #adebeb;
-}
 
-
-#sub-head {
+.sub-head {
     background-image: url(https://images.pexels.com/photos/6810900/pexels-photo-6810900.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2);
-    background-size: 100%;
-    line-height: 3in;
-    margin-top: 0;
-    padding: 0;
-    border: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0;
+    width: 100%;
+    height: 200px;
+    margin-right: 20px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: end;
+    padding-bottom: 20px;
 }
 
-#sub-head h2 {
+.sub-head h2 {
+    margin: 0;
+    font-size: 40px;
+    padding: 10px;
+    background-color: #adebeb;
+    align-items: flex-end; 
     color: #00091a;
-    display:flex;
 }
 
 section {
@@ -68,51 +76,117 @@ section {
     position: relative;
 }
 
-/* #work div a img {
-    width:100px;
-    height:100px;
-} */
+.contents{
+    display: flex;
+}
 
-#full div a img {
+.content-head{
+    align-items: flex-start;
+    margin-left: 200px;
+    width: 20%;
+}
+
+.content-body{
+    align-items: flex-start;
     width: 80%;
 }
-#half #firstStack {
-   display: flex;
+
+.content-head p{
+    color: rgb(38, 128, 202);
+    align-items: flex-end;
+    text-align: end;
+    font-size: 40PX;
+    padding: 10px;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-top: 10px;
 }
 
-#half #secondStack {
+.content-body p{
+    
+    font-size: 16px;
+    border-left: 2px solid black;
+    padding: 0px 10px 10px 20px;
     display: flex;
+
 }
 
-#half div a img {
-    width: 60%;
+.container{
+    width: 90%;
+    border-left: 2px solid black;
+    
 }
 
-#portfolioImgs {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.img-short{
+    width: 100%;
+    margin-left: 20px;
+    background-image: url(./images/1.jpg);
+    border: 2px solid cyan;
+    margin: 5px;
 }
 
-/* img {
-    width: 20px;
-    height: 20px;
-} */
 
-#about-me,
-#work,
-#contact-me {
+
+.img-text{
+    background-color: cyan;
+    display: inline-block;
+    padding: 10px;
+    margin-left: 0;
+    margin: 30px 0 30px 0;
+}
+
+.in-div-container{
     display: flex;
-    border-right:5px;
-    border-right-color: #00091a;
-    margin: 20px;
-    margin-right: 20px;
-    padding: 20px;
-    color: #00091a;
+    flex-wrap: stretch;
+    align-content: space-between;
+}
+
+.socials span{
+    text-align: center;
+    font-size: 20px;
+    border-bottom: 2px solid black;
+}
+
+.socials{
+    align-content: space-between;
     justify-content: space-between;
+    width: 80%;
+}s
+
+.about-title {
+    align-items: flex-start;
+    margin-left: 200px;
+    width: 20%;
+    border-right: 6px solid #000033
 }
 
-#about-me p {
+.about-text {
+    align-items: flex-start;
+    width: 80%;
+    margin: 20 px;
+}
+
+.about-text p {
+    color: rgb(38, 128, 202);
+    align-items: flex-end;
+    text-align: end;
+    font-size: 40PX;
+    padding: 10px;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-top: 10px;
+}
+
+.content-body p{
+    
+    font-size: 16px;
+    border-left: 2px solid black;
+    padding: 0px 10px 10px 20px;
+    display: flex;
+
+}
+
+.about-me p {
     margin-left: 3rem;
     margin-right: 3rem;
 }
@@ -125,4 +199,9 @@ section {
 h3 {
     color: #000033;
     font-size: 50px;
+}
+
+img {
+    border:#adebeb;
+    border: width 6px;
 }
